# app/Http/Controllers/CustomerController.php
@@ -125,7 +125,40 @@ class CustomerController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * Mostrar la información de un Customer
+     * @OA\Get (
+     *     path="/api/v1/customers/{id}",
+     *     tags={"Customer"},
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="id", type="number", example=1),
+     *              @OA\Property(property="name", type="string", example="Aderson Felix"),
+     *              @OA\Property(property="email", type="string", example="anderson@example.com"),
+     *              @OA\Property(property="phone", type="string", example="(3165) 7497093"),
+     *              @OA\Property(property="address", type="string", example="Centers Suite 777"),
+     *              @OA\Property(property="city", type="string", example="El vigia"),
+     *              @OA\Property(property="postalCode", type="string", example="4554"),
+     *              @OA\Property(property="status", type="string", example="active"),
+     *              @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
+     *              @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
+     *         )
+     *     ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="NOT FOUND",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="No query results for model [App\\Models\\Customer] #id"),
+     *          )
+     *      )
+     * )
      */
     public function show(Customer $customer)
     {
